# code-review-tribal-knowledge

./: .gitignore  README.md  code-review.md  crtk.toml  pyproject.toml
scripts/: crtk-collect.py
src/crtk/: cli.py  config.py  db.py  embeddings.py  fetcher.py  mcp_server.py  models.py  retry.py  schema.sql  search.py  synthesizer.py  tagger.py
